--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marioogr.github.io/pokeinfo",
+  "homepage": ".",
   "name": "postulacion",
   "version": "0.1.0",
   "private": true,
